# probar

./: .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pmat.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  examples_test_output.txt  ignored_test_output.txt  lcov.info  parallel_test_output.txt  qa_report.txt  roadmap.yaml  test_output.txt
crates/probar/: Cargo.toml  README.md
crates/probar-cli/: Cargo.toml  README.md
crates/probar-cli/examples/: stress_testing.rs
crates/probar-cli/src/: commands.rs  commands_tests.rs  comply_commands.rs  config.rs  debug.rs  dev_server.rs  error.rs  generate.rs  lib.rs  lint.rs  load_testing.rs  main.rs  main_tests.rs  output.rs  runner.rs  score.rs  simulation.rs  statistics.rs  stress.rs  tracing.rs  tree.rs  visualization.rs  wasm_testing.rs
crates/probar-cli/src/handlers/: animation.rs  audio.rs  av_sync.rs  build.rs  comply.rs  config.rs  coverage.rs  init.rs  llm.rs  mod.rs  report.rs  serve.rs  video.rs
crates/probar-cli/tests/: smoke_tests.rs
crates/probar-derive/: Cargo.toml
crates/probar-derive/src/: lib.rs
crates/probar-js-gen/: Cargo.toml  FALSIFICATION.md  README.md  mutants.toml
crates/probar-js-gen/src/: builder.rs  codegen.rs  error.rs  hir.rs  lib.rs  manifest.rs
crates/probar-js-gen/tests/: comprehensive_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/probar/benches/: benchmarks.rs  coverage_ops.rs  image_ops.rs  locator_ops.rs  playbook_ops.rs
crates/probar/examples/: accessibility_demo.rs  audio_emulation.rs  basic_test.rs  brick_demo.rs  brick_tui_demo.rs  comply_demo.rs  coverage_demo.rs  distributed_worker_demo.rs  docker_demo.rs  element_assertions.rs  equation_verify.rs  execution_trace.rs  gui_coverage.rs  locator_demo.rs  locator_operations.rs  mouse_actions.rs  multi_context.rs  network_intercept.rs  page_object.rs  panic_paths_demo.rs  performance_profile.rs  pixel_coverage_heatmap.rs  playbook_testing.rs  pmat_bridge_demo.rs  pong_simulation.rs  presentar_demo.rs  retry_assertions.rs  semantic_locators.rs  soft_assertions.rs  streaming_ux_demo.rs  visual_regression_demo.rs  wait_mechanisms.rs  wasm_capabilities.rs  wasm_pixel_gui_demo.rs  watch_mode.rs  web_builders_demo.rs  web_sys_gen_demo.rs  web_validation_demo.rs  websocket_monitor.rs  worker_brick_demo.rs  (+2 more)
crates/probar/src/: accessibility.rs  assertion.rs  brick.rs  brick_house.rs  bridge.rs  browser.rs  browser_tests.rs  capabilities.rs  capabilities_tests.rs  cdp_coverage.rs  clock.rs  context.rs  dialog.rs  docker.rs  docker_tests.rs  driver.rs  event.rs  file_ops.rs  fixture.rs  fuzzer.rs  generated_contracts.rs  har.rs  harness.rs  lib.rs  locator.rs  locator_tests.rs  network.rs  page_object.rs  performance.rs  renacer_integration.rs  replay.rs  reporter.rs  result.rs  runtime.rs  shard.rs  simulation.rs  snapshot.rs  strict.rs  tracing_support.rs  tui_load.rs  (+9 more)
crates/probar/src/animation/: easing.rs  mod.rs  timing.rs  types.rs
crates/probar/src/assertion/: equation.rs  mod.rs  retry.rs  soft.rs
crates/probar/src/audio_quality/: clipping.rs  levels.rs  mod.rs  silence.rs  types.rs
crates/probar/src/av_sync/: comparison.rs  detection.rs  extraction.rs  mod.rs  types.rs
crates/probar/src/brick/: audio.rs  compute.rs  deterministic.rs  deterministic_tests.rs  distributed.rs  distributed_tests.rs  event.rs  mod.rs  pipeline.rs  pipeline_tests.rs  tui.rs  web_sys_gen.rs  widget.rs  widget_tests.rs  worker.rs
crates/probar/src/comply/: mod.rs  pmat_bridge.rs  tarantula.rs  wasm_threading.rs
crates/probar/src/coverage/: block.rs  collector.rs  executor.rs  hypotheses.rs  jidoka.rs  memory.rs  mod.rs  report.rs  superblock.rs  tests.rs  thread_local.rs
crates/probar/src/emulation/: audio.rs  device.rs  geolocation.rs  mod.rs
crates/probar/src/gpu_pixels/: kernel_pixels.rs  mod.rs  ptx_analysis.rs  regression.rs
crates/probar/src/lint/: ast_visitor.rs  mod.rs  panic_paths.rs  state_sync.rs
crates/probar/src/llm/: assertion.rs  benchmark.rs  client.rs  experiment.rs  gpu_telemetry.rs  loadtest.rs  loadtest_tests.rs  mod.rs  prompts.rs  report.rs  score.rs  score_tests.rs  training_scorecard.rs
crates/probar/src/media/: gif_recorder.rs  mod.rs  png_exporter.rs  svg_exporter.rs  svg_exporter_tests.rs  video_recorder.rs  video_recorder_tests.rs
crates/probar/src/mock/: falsification_tests.rs  mod.rs  strategies.rs  test_harness.rs  wasm_runtime.rs
crates/probar/src/perf/: export.rs  metrics.rs  mod.rs  span.rs  trace.rs
crates/probar/src/pixel_coverage/: config.rs  falsification.rs  heatmap.rs  heatmap_tests.rs  metrics.rs  mod.rs  parallel.rs  terminal.rs  tracker.rs  wasm_demo.rs
crates/probar/src/playbook/: complexity.rs  executor.rs  mod.rs  mutation.rs  runner.rs  runner_tests.rs  schema.rs  state_machine.rs
crates/probar/src/presentar/: falsification.rs  mod.rs  schema.rs  terminal.rs  validator.rs
crates/probar/src/runner/: builder.rs  config.rs  mod.rs  server.rs
crates/probar/src/tui/: assertions.rs  backend.rs  brick.rs  buffer.rs  compute_block.rs  mod.rs  snapshot.rs  tty.rs
crates/probar/src/video_quality/: mod.rs  probe.rs  types.rs  validation.rs
crates/probar/src/web/: css_builder.rs  html_builder.rs  mod.rs  (+2 more)
crates/showcase-calculator/: Cargo.toml  accessibility.yaml  browsers.yaml
crates/showcase-calculator/benches/: performance_baseline.json
crates/showcase-calculator/examples/: calculator_tui.rs  calculator_tui_demo.rs  calculator_wasm_demo.rs  gui_coverage_report.rs
crates/showcase-calculator/load-tests/: load_test_config.yaml
crates/showcase-calculator/playbooks/: calculator.yaml  error_handling.yaml
crates/showcase-calculator/recordings/: edge_case_decimal.json  edge_case_large_numbers.json  error_path.json  happy_path.json
crates/showcase-calculator/snapshots/: error_state.json  idle_state.json  result_state.json
crates/showcase-calculator/src/: driver.rs  lib.rs  probar_tests.rs
crates/showcase-calculator/tests/: README.md  gui_coverage_tests.rs  keypad_proptests.rs
crates/showcase-calculator/www/: index.html
(+165 files in other folders)
