[workspace]
resolver = "2"
members = [
    "crates/probar",
    "crates/probar-derive",
    "crates/probar-cli",
    "crates/probar-js-gen",
    # showcase-calculator removed - uses ratatui which is deprecated
]

[workspace.package]
version = "1.0.2"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/probar"
homepage = "https://github.com/paiml/probar"
authors = ["PAIML Team"]
keywords = ["testing", "wasm", "games", "browser", "e2e"]
categories = ["development-tools::testing", "wasm", "game-development"]

[workspace.dependencies]
# Core dependencies
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image comparison for visual regression
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Base64 for export/sharing
base64 = "0.22"

# CDP/Browser testing (optional)
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
futures = "0.3"

# WASM runtime for logic testing (optional)
wasmtime = "38"
async-trait = "0.1"

# Media generation (Phase 1)
gif = "0.14"
png = "0.18"
# Video recording - pure Rust approach
mp4 = "0.14"

# CLI (Phase 1)
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
indicatif = "0.17"
console = "0.15"

# File watching (Phase 6)
notify = "7.0"

# HTTP Server (for WASM dev server)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header", "compression-gzip"] }
tokio-tungstenite = "0.28"
mime_guess = "2.0"

# Tracing (Phase 3)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Testing
proptest = "1.5"
criterion = "0.5"
tempfile = "3"

# AST analysis for linting
syn = { version = "2.0", features = ["full", "visit", "parsing", "extra-traits"] }

# Serialization for mock fidelity
bincode = "1.3"

# GPU compute (trueno - SIMD-accelerated tensor operations)
trueno = { version = "0.14", features = ["gpu"] }

# TUI Testing (EDD compliance)
# Uses custom TextGrid/MockTty - no ratatui
crossterm = "0.28"

# ComputeBlock testing (presentar-terminal integration)
# NOTE: Path dependency until published to crates.io
presentar-terminal = { version = "0.3", path = "../presentar/crates/presentar-terminal" }
presentar-core = { version = "0.3", path = "../presentar/crates/presentar-core" }

# Deterministic replay
serde_yaml = "0.9"
sha2 = "0.10"
regex = "1.11"

# UUID for unique identifiers
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# Local crates - exact versions for verified release
probar = { version = "=1.0.1", path = "crates/probar" }
probar-derive = { version = "=1.0.1", path = "crates/probar-derive" }
probar-cli = { version = "=1.0.1", path = "crates/probar-cli" }
probar-js-gen = { version = "=1.0.1", path = "crates/probar-js-gen" }

# Hashing
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }

# Docker SDK for container management
bollard = "0.18"

[workspace.lints.rust]
# Safety and correctness
unsafe_code = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

# Prevent common mistakes - these generate many false positives in test frameworks
# unused_results = "warn"  # Disabled: generates false positives for builder patterns
# unused_must_use = "warn" # Disabled: covered by clippy lints

[workspace.lints.clippy]
# PMAT compliance - warn on panic paths in production code
# Note: Test code is allowed to use unwrap/expect/panic for simplicity
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"

# Code quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Performance
inefficient_to_string = "warn"
large_enum_variant = "warn"
large_stack_arrays = "warn"

# Style consistency
module_name_repetitions = "allow"
similar_names = "allow"

# Testing framework - numeric precision is acceptable
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

# Testing framework - certain patterns are acceptable
redundant_closure = "allow"
unnecessary_wraps = "allow"
use_self = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
unused_self = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"
struct_field_names = "allow"
missing_fields_in_debug = "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
suboptimal_flops = "allow"
cognitive_complexity = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
useless_vec = "allow"
io_other_error = "allow"
uninlined_format_args = "allow"
unreadable_literal = "allow"
struct_excessive_bools = "allow"
clone_on_ref_ptr = "allow"
cloned_instead_of_copied = "allow"
# Functional style preferences - acceptable in test framework
if_not_else = "allow"
match_same_arms = "allow"
map_unwrap_or = "allow"
# Documentation style - less strict for test framework
doc_markdown = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
# Iterator style - acceptable patterns
manual_let_else = "allow"
implicit_hasher = "allow"
# Tests and examples need these
approx_constant = "allow"
# Additional acceptable patterns
redundant_closure_for_method_calls = "allow"
imprecise_flops = "allow"
comparison_chain = "allow"
double_must_use = "allow"
manual_assert = "allow"
should_implement_trait = "allow"
assigning_clones = "allow"
manual_div_ceil = "allow"
derivable_impls = "allow"
cast_lossless = "allow"
debug_assert_with_mut_call = "allow"
type_complexity = "allow"
range_plus_one = "allow"
needless_raw_string_hashes = "allow"
format_push_string = "allow"
unnecessary_debug_formatting = "allow"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
