[workspace]
resolver = "2"
members = [
    "crates/probar",
    "crates/probar-derive",
    "crates/probar-cli",
    "crates/probar-js-gen",
    # showcase-calculator removed - uses ratatui which is deprecated
]

[workspace.package]
version = "1.0.3"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/probar"
homepage = "https://github.com/paiml/probar"
authors = ["PAIML Team"]
keywords = ["testing", "wasm", "games", "browser", "e2e"]
categories = ["development-tools::testing", "wasm", "game-development"]

[workspace.dependencies]
# Core dependencies
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image comparison for visual regression
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Base64 for export/sharing
base64 = "0.22"

# CDP/Browser testing (optional)
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
futures = "0.3"

# WASM runtime for logic testing (optional)
wasmtime = "38"
async-trait = "0.1"

# Media generation (Phase 1)
gif = "0.14"
png = "0.18"
# Video recording - pure Rust approach
mp4 = "0.14"

# CLI (Phase 1)
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
indicatif = "0.17"
console = "0.15"

# File watching (Phase 6)
notify = "7.0"

# HTTP Server (for WASM dev server)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header", "compression-gzip"] }
tokio-tungstenite = "0.28"
mime_guess = "2.0"

# Tracing (Phase 3)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Testing
proptest = "1.5"
criterion = "0.5"
tempfile = "3"

# AST analysis for linting
syn = { version = "2.0", features = ["full", "visit", "parsing", "extra-traits"] }

# Serialization for mock fidelity
bincode = "1.3"

# GPU compute (trueno - SIMD-accelerated tensor operations)
trueno = { version = "0.16.5", features = ["gpu"] }

# TUI Testing (EDD compliance)
# Uses custom TextGrid/MockTty - no ratatui
crossterm = "0.28"

# ComputeBlock testing (presentar-terminal integration)
presentar-terminal = "0.3"
presentar-core = "0.3"

# Deterministic replay
serde_yaml_ng = "0.10"
sha2 = "0.10"
regex = "1.11"

# UUID for unique identifiers
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# Local crates - exact versions for verified release
probar = { version = "=1.0.3", path = "crates/probar" }
probar-derive = { version = "=1.0.3", path = "crates/probar-derive" }
probar-cli = { version = "=1.0.3", path = "crates/probar-cli" }
probar-js-gen = { version = "=1.0.3", path = "crates/probar-js-gen" }

# Hashing
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }

# Docker SDK for container management
bollard = "0.18"

[workspace.lints.rust]
# Safety and correctness
unsafe_code = "warn"
missing_docs = "allow"
missing_debug_implementations = "warn"

# Prevent common mistakes - these generate many false positives in test frameworks
# unused_results = "warn"  # Disabled: generates false positives for builder patterns
# unused_must_use = "warn" # Disabled: covered by clippy lints

[workspace.lints.clippy]
# PMAT compliance - probar IS a test framework, so unwrap/expect/panic are acceptable
# in production code (test runners, assertions, etc.)
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
unreachable = "warn"

# Code quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Performance
inefficient_to_string = "warn"
large_enum_variant = "warn"
large_stack_arrays = "warn"

# Style consistency
module_name_repetitions = "allow"
similar_names = "allow"

# Testing framework - numeric precision is acceptable
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

# Test framework patterns — pedantic/nursery lints acceptable here
clone_on_ref_ptr = "allow"
cloned_instead_of_copied = "allow"
cognitive_complexity = "allow"
doc_markdown = "allow"
field_reassign_with_default = "allow"
float_cmp = "allow"
float_cmp_const = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
implicit_clone = "allow"
io_other_error = "allow"
items_after_statements = "allow"
iter_without_into_iter = "allow"
manual_string_new = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_collect = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
redundant_pub_crate = "allow"
return_self_not_must_use = "allow"
significant_drop_tightening = "allow"
string_lit_as_bytes = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
suboptimal_flops = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unused_self = "allow"
use_self = "allow"
useless_vec = "allow"
missing_const_for_fn = "allow"
# Additional patterns
approx_constant = "allow"
assigning_clones = "allow"
comparison_chain = "allow"
derivable_impls = "allow"
double_must_use = "allow"
implicit_hasher = "allow"
imprecise_flops = "allow"
manual_assert = "allow"
manual_div_ceil = "allow"
manual_let_else = "allow"
should_implement_trait = "allow"
collection_is_never_read = "allow"
unused_async = "allow"
used_underscore_binding = "allow"
used_underscore_items = "allow"
suspicious_operation_groupings = "allow"
single_match_else = "allow"
let_and_return = "allow"
manual_clamp = "allow"
vec_init_then_push = "allow"
no_effect_underscore_binding = "allow"
unused_enumerate_index = "allow"
single_match = "allow"
needless_borrows_for_generic_args = "allow"
default_constructed_unit_structs = "allow"
manual_is_variant_and = "allow"
default_trait_access = "allow"
unnecessary_get_then_check = "allow"
cast_lossless = "allow"
debug_assert_with_mut_call = "allow"
type_complexity = "allow"
range_plus_one = "allow"
needless_raw_string_hashes = "allow"
format_push_string = "allow"
unnecessary_debug_formatting = "allow"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
