[package]
name = "probar-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Probar CLI: Command-line interface for WASM testing"
license.workspace = true
repository.workspace = true

[[bin]]
name = "probar"
path = "src/main.rs"

[dependencies]
# Core library (local path for development)
jugar-probar = { path = "../probar" }

# CLI framework
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP Server for WASM dev
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
mime_guess = { workspace = true }
notify = { workspace = true }
futures = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
