[package]
name = "probador"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
description = "CLI for Probar: Rust-native testing framework for WASM games"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["testing", "wasm", "games", "cli", "automation"]
categories = ["development-tools::testing", "command-line-utilities", "wasm"]

[[bin]]
name = "probador"
path = "src/main.rs"

[dependencies]
# Core library
jugar-probar = { version = "0.3.3", path = "../probar" }

# CLI framework
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# HTTP Server for WASM dev
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
mime_guess = { workspace = true }
notify = { workspace = true }
futures = { workspace = true }
chrono = "0.4"

# Debug and scoring utilities
atty = "0.2"
glob = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
