[package]
name = "probar-js-gen"
version = "1.0.0-rc.1"
edition = "2021"
description = "NASA/DO-178B-grade Rust DSL for type-safe JavaScript generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/probar"
keywords = ["javascript", "codegen", "dsl", "wasm", "webworker"]
categories = ["development-tools", "wasm"]

[dependencies]
thiserror = "2"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
quickcheck = "1"
quickcheck_macros = "1"
pretty_assertions = "1"
tempfile = "3"

[features]
default = []
# Enable fuzzing support
fuzzing = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Safety
unwrap_used = "warn"  # Allow in codegen (formatting to String never fails)
expect_used = "warn"
panic = "warn"
pedantic = { level = "warn", priority = -1 }

# Allow these for ergonomic API and testing framework
wildcard_imports = "allow"
missing_errors_doc = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
should_implement_trait = "allow"
return_self_not_must_use = "allow"
