[package]
name = "jugar-probar"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Probar: Rust-native testing framework for WASM games"
license.workspace = true
repository.workspace = true
keywords = ["testing", "wasm", "games", "browser", "e2e"]
categories = ["development-tools::testing", "wasm"]

[features]
default = ["tui"]
# Enable real browser control (requires chromium)
browser = ["chromiumoxide", "tokio", "futures"]
# Enable WASM runtime for logic testing (Phase 1)
runtime = ["wasmtime", "async-trait"]
# Enable derive macros for type-safe selectors (Phase 4)
derive = ["jugar-probar-derive"]
# TUI testing support (included by default)
# Note: For wasm32-unknown-unknown target, use --no-default-features
tui = ["ratatui", "crossterm"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }

# Media generation
gif = { workspace = true }
png = { workspace = true }
mp4 = { workspace = true }

# TUI testing (EDD compliance) - optional, not available on WASM
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
regex = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }

# Tracing and UUID (available on all targets)
tracing = { workspace = true }
uuid = { workspace = true }

# Watch mode (Phase 6) - not available on WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "Performance"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Optional CDP browser control
chromiumoxide = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# Optional WASM runtime for logic testing (Phase 1)
wasmtime = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# Optional derive macros for type-safe selectors (Phase 4)
jugar-probar-derive = { version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[[example]]
name = "locator_demo"
path = "examples/locator_demo.rs"

[[example]]
name = "accessibility_demo"
path = "examples/accessibility_demo.rs"

[[example]]
name = "coverage_demo"
path = "examples/coverage_demo.rs"

[[example]]
name = "pong_simulation"
path = "examples/pong_simulation.rs"

[lints]
workspace = true
